// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Layout/SensorsList Default 1`] = `
<div
  className="p-6 pb-8"
>
  <h1
    className="text-2xl m-0 mb-2 text-black font-headline"
  >
    Sensoren
  </h1>
  <div
    className="w-full max-w-full overflow-y-hidden overflow-x-auto pb-4"
  >
    <table
      className="w-full text-left"
    >
      <thead
        className="font-normal"
      >
        <tr
          className="border-b border-gray-200 mb-4 py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
        >
          <th
            className="sm:py-3 sm:pr-3 sm:pl-0 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Gerät-ID
          </th>
          <th
            className="w-full sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Anzeigename
          </th>
          <th
            className="sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Letztes Signal
          </th>
          <th
            className="sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          />
          <th
            className="pr-0 sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          />
        </tr>
      </thead>
      <tbody>
        <tr
          className="transition hover:bg-gray-50 cursor-pointer w-full py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
          onClick={[Function]}
          style={
            Object {
              "gridTemplateAreas": "
      'id         name'
      'lastSeen   lastSeen'
      'button1    button2'
    ",
              "gridTemplateColumns": "auto 1fr",
            }
          }
        >
          <td
            className="font-bold sm:font-normal pl-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "id",
                "minWidth": 140,
              }
            }
          >
            <div
              className="grid gap-2 items-center"
              style={
                Object {
                  "gridTemplateColumns": "20px 1fr",
                }
              }
            >
              <img
                alt="A microcontroller icon"
                className="inline-block w-5 h-5"
                src="/images/illustrations/microcontroller-1.svg"
              />
              device-1
            </div>
          </td>
          <td
            className="w-full sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "name",
              }
            }
          >
            Neo
          </td>
          <td
            className="italic text-gray-500 sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "lastSeen",
              }
            }
          >
            Vor ein paar Sekunden
          </td>
          <td
            className="sm:text-right sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button1",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
              onClick={[Function]}
              type="button"
            >
              Bearbeiten
            </button>
          </td>
          <td
            className="sm:text-right pr-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button2",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-error hover:opacity-60 text-error focus-offset"
              onClick={[Function]}
              type="button"
              variant="dangerous"
            >
              Löschen
            </button>
          </td>
        </tr>
        <tr
          className="transition hover:bg-gray-50 cursor-pointer w-full py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
          onClick={[Function]}
          style={
            Object {
              "gridTemplateAreas": "
      'id         name'
      'lastSeen   lastSeen'
      'button1    button2'
    ",
              "gridTemplateColumns": "auto 1fr",
            }
          }
        >
          <td
            className="font-bold sm:font-normal pl-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "id",
                "minWidth": 140,
              }
            }
          >
            <div
              className="grid gap-2 items-center"
              style={
                Object {
                  "gridTemplateColumns": "20px 1fr",
                }
              }
            >
              <img
                alt="A microcontroller icon"
                className="inline-block w-5 h-5"
                src="/images/illustrations/microcontroller-1.svg"
              />
              device-2
            </div>
          </td>
          <td
            className="w-full sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "name",
              }
            }
          >
            Triniti
          </td>
          <td
            className="italic text-gray-500 sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "lastSeen",
              }
            }
          >
            Vor 6 Monaten
          </td>
          <td
            className="sm:text-right sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button1",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
              onClick={[Function]}
              type="button"
            >
              Bearbeiten
            </button>
          </td>
          <td
            className="sm:text-right pr-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button2",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-error hover:opacity-60 text-error focus-offset"
              onClick={[Function]}
              type="button"
              variant="dangerous"
            >
              Löschen
            </button>
          </td>
        </tr>
        <tr
          className="transition hover:bg-gray-50 cursor-pointer w-full py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
          onClick={[Function]}
          style={
            Object {
              "gridTemplateAreas": "
      'id         name'
      'lastSeen   lastSeen'
      'button1    button2'
    ",
              "gridTemplateColumns": "auto 1fr",
            }
          }
        >
          <td
            className="font-bold sm:font-normal pl-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "id",
                "minWidth": 140,
              }
            }
          >
            <div
              className="grid gap-2 items-center"
              style={
                Object {
                  "gridTemplateColumns": "20px 1fr",
                }
              }
            >
              <img
                alt="A microcontroller icon"
                className="inline-block w-5 h-5"
                src="/images/illustrations/microcontroller-1.svg"
              />
              device-3
            </div>
          </td>
          <td
            className="w-full sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "name",
              }
            }
          >
            Morpheus
          </td>
          <td
            className="italic text-gray-500 sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "lastSeen",
              }
            }
          >
            —
          </td>
          <td
            className="sm:text-right sm:py-3 pl-8 sm:pl-2 sm:pr-6 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button1",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
              onClick={[Function]}
              type="button"
            >
              Bearbeiten
            </button>
          </td>
          <td
            className="sm:text-right pr-0 sm:py-3 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            style={
              Object {
                "gridArea": "button2",
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-error hover:opacity-60 text-error focus-offset"
              onClick={[Function]}
              type="button"
              variant="dangerous"
            >
              Löschen
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <div
    className="text-right mt-8"
  >
    <button
      className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
      onClick={[Function]}
      type="button"
    >
      Sensor hinzufügen
    </button>
  </div>
</div>
`;

exports[`Storyshots Layout/SensorsList Empty 1`] = `
<div
  className="p-6 pb-8"
>
  <h1
    className="text-2xl m-0 mb-2 text-black font-headline"
  >
    Sensoren
  </h1>
  <div
    className="w-full max-w-full overflow-y-hidden overflow-x-auto pb-4"
  >
    <table
      className="w-full text-left"
    >
      <thead
        className="font-normal"
      >
        <tr
          className="border-b border-gray-200 mb-4 py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
        >
          <th
            className="sm:py-3 sm:pr-3 sm:pl-0 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Gerät-ID
          </th>
          <th
            className="w-full sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Anzeigename
          </th>
          <th
            className="sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          >
            Letztes Signal
          </th>
          <th
            className="sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          />
          <th
            className="pr-0 sm:py-3 sm:pr-3 sm:pl-2 whitespace-nowrap w-auto block align-top sm:table-cell text-gray-400 hidden sm:visible font-normal"
          />
        </tr>
      </thead>
      <tbody>
        <tr
          className="py-4 sm:py-0 whitespace-nowrap w-auto block align-top sm:table-cell grid gap-2 sm:gap-0 sm:table-row"
        >
          <td
            className="text-center align-middle p-0 whitespace-nowrap w-auto block align-top sm:table-cell font-normal"
            colSpan={5}
            style={
              Object {
                "height": 50,
              }
            }
          >
            <button
              className="underline transition cursor-pointer text-left font-headline focus:ring-green text-blue underline-green hover:text-purple focus-offset"
              onClick={[Function]}
              type="button"
            >
              <img
                alt="A microcontroller icon"
                className="inline-block w-5 h-5 mr-2 -mt-0.5"
                src="/images/illustrations/microcontroller-1.svg"
              />
              Ersten Sensor hinzufügen
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
